feat: add cmake to execute testing class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,17 @@
 cmake_minimum_required(VERSION 3.15)
-project(opencv_test LANGUAGES CXX)
-
+project(opencv_test)
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 17)
+# Find OpenCV
 find_package(OpenCV REQUIRED)
+# Include directories
 include_directories(${OpenCV_INCLUDE_DIRS})
-
+# Source files
 file(GLOB SOURCES
     src/*.cpp
     src/*.hpp
 )
-
-# Enable automatic symbol export
-set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
-
-add_library(opencv_test SHARED ${SOURCES})
+# Create executable
+add_executable(opencv_test ${SOURCES})
+# Link OpenCV
 target_link_libraries(opencv_test ${OpenCV_LIBS})
-set_target_properties(opencv_test PROPERTIES DEBUG_POSTFIX "_d")
-
-install(TARGETS opencv_test
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
-        RUNTIME DESTINATION bin)
-
-file(GLOB HEADERS src/*.h src/*.hpp)
-install(FILES ${HEADERS} DESTINATION include/opencv_test)
-
-# Build the test executable (which uses the main() from trackingTestBench.cpp)
-add_executable(trackingTestBench src/trackingTestBench.cpp)
-target_link_libraries(trackingTestBench opencv_test ${OpenCV_LIBS})
-
-# Optionally install the test executable if desired
-install(TARGETS trackingTestBench
-        RUNTIME DESTINATION bin)
