--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,26 +1,34 @@
 cmake_minimum_required(VERSION 3.15)
-project(opencv_test)
-# Set C++ standard
+project(opencv_test LANGUAGES CXX)
+
 set(CMAKE_CXX_STANDARD 17)
-# Find OpenCV
 find_package(OpenCV REQUIRED)
-# Include directories
 include_directories(${OpenCV_INCLUDE_DIRS})
-# Source files
+
 file(GLOB SOURCES
     src/*.cpp
     src/*.hpp
 )
-# Create executable
-add_executable(opencv_test ${SOURCES})
-# Link OpenCV
+
+# Enable automatic symbol export
+set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
+
+add_library(opencv_test SHARED ${SOURCES})
 target_link_libraries(opencv_test ${OpenCV_LIBS})
+set_target_properties(opencv_test PROPERTIES DEBUG_POSTFIX "_d")
 
+install(TARGETS opencv_test
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
+        RUNTIME DESTINATION bin)
 
-add_custom_target(copy_calibration_files ALL
-    COMMAND ${CMAKE_COMMAND} -E make_directory "${CMAKE_BINARY_DIR}/data/camera_calibration"
-    COMMAND ${CMAKE_COMMAND} -E copy_directory
-      "${CMAKE_SOURCE_DIR}/data/camera_calibration"
-      "${CMAKE_BINARY_DIR}/data/camera_calibration"
-    COMMENT "Copying camera calibration files to build directory"
-)
+file(GLOB HEADERS src/*.h src/*.hpp)
+install(FILES ${HEADERS} DESTINATION include/opencv_test)
+
+# Build the test executable (which uses the main() from trackingTestBench.cpp)
+add_executable(trackingTestBench src/trackingTestBench.cpp)
+target_link_libraries(trackingTestBench opencv_test ${OpenCV_LIBS})
+
+# Optionally install the test executable if desired
+install(TARGETS trackingTestBench
+        RUNTIME DESTINATION bin)
