--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,7 @@ FodyWeavers.xsd
 /.vscode
 
 /build/*
+memoria/svg-inkscape/flow_exposure_svg-tex.pdf
+memoria/svg-inkscape/flow_exposure_svg-tex.pdf_tex
+memoria/svg-inkscape/flujo_tfg_svg-tex.pdf
+memoria/svg-inkscape/flujo_tfg_svg-tex.pdf_tex
